# quack

./: .coverage  .gitignore  404.html  LICENSE  getting-started.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
api/: quantifiers.md
api/base/: index.html
api/metrics/: index.html
api/quantifiers/: index.html
data/: fbis_X.npz  fbis_y.npy  la1_X.npz  la1_y.npy  la2_X.npz  la2_y.npy  ohscal_X.npz  ohscal_y.npy
docs/: getting-started.md  index.md  tutorials.md
docs/api/: base.md  metrics.md  quantifiers.md
getting-started/: index.html
notebook/: load_forman2005.ipynb
notebooks/: loading_datasets.ipynb
quack/: core.py
quack.egg-info/: PKG-INFO  SOURCES.txt
quack/datasets/: __init__.py  _data_loaders.py  _forman_datasets.py  _reviews_datasets.py  _twitter_datasets.py  _uci_datasets.py
quack/utils/: __init__.py  _file_manager.py
quack/visualization/: binary.py
search/: search_index.json
src/quack/: __init__.py  core.py
src/quack/datasets/: __init__.py  _forman_datasets.py  _reviews_datasets.py  _uci_datasets.py  utils.py
src/quack/metrics/: __init__.py  _ae.py  _kld.py  _nkld.py  _rae.py  base.py
src/quack/quantifiers/: __init__.py  _baselines.py  _dmm.py  _features.py  _iterators.py  _probabilities.py  _threshold.py  base.py
src/quack/utils/: _file_manager.py
src/quack/visualization/: utils.py
tests/: test_core.py  test_file_manager.py
tutorials/: index.html  methods.md
tutorials/methods/: index.html
