[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quack"
version = "0.1.0"
description = "Quantification Kit for Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gilberto Medeiros", email = "medeiros.gilberto.br@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-shadcn",
    "mkdocstrings[python]>=0.24.0",
    "Pygments"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quack --cov-report=term-missing"